--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NMedia</string>
     <string name="app_title">NMedia!</string>
+    <string name="avatar_description">Avatar</string>
+    <string name="more_menu">More actions</string>
 </resources>
