--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -4,4 +4,7 @@
     <string name="app_title">НМедиа!</string>
     <string name="avatar_description">Аватар</string>
     <string name="more_menu">Больше действий</string>
+    <string name="likes_count">Количество лайков</string>
+    <string name="share">Поделиться</string>
+    <string name="views">Просмотров</string>
 </resources>
