--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -7,4 +7,5 @@
     <string name="likes_count">Количество лайков</string>
     <string name="share">Поделиться</string>
     <string name="views">Просмотров</string>
+    <string name="menu_remove">Удалить</string>
 </resources>
