--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="share">Share</string>
     <string name="views">Views</string>
     <string name="menu_remove">Remove</string>
+    <string name="save_description">Save description</string>
+    <string name="message_text">Message text</string>
+    <string name="error_empty_content">Error: message text is empty</string>
+    <string name="menu_edit">Edit</string>
 </resources>
