--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -12,4 +12,5 @@
     <string name="message_text">Текст сообщения</string>
     <string name="error_empty_content">Ошибка: пустой текст сообщения</string>
     <string name="menu_edit">Редактировать</string>
+    <string name="edit_message_title">Редактирование сообщения</string>
 </resources>
