--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="message_text">Message text</string>
     <string name="error_empty_content">Error: message text is empty</string>
     <string name="menu_edit">Edit</string>
+    <string name="edit_message_title">Edit message</string>
 </resources>
