--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,4 +13,8 @@
     <string name="error_empty_content">Ошибка: пустой текст сообщения</string>
     <string name="menu_edit">Редактировать</string>
     <string name="edit_message_title">Редактирование сообщения</string>
+    <string name="share_message_title">Поделиться сообщением</string>
+    <string name="open_editor_title">Открыть редактор текста</string>
+    <string name="editor_save_button">Сохранить</string>
+    <string name="editor_cancel_button">Отмена</string>
 </resources>
