Video intent added

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_edit">Edit</string>
     <string name="edit_message_title">Edit message</string>
     <string name="share_message_title">Share post</string>
+    <string name="video_view_title">Open video</string>
     <string name="open_editor_title">Open post editor</string>
     <string name="editor_save_button">Save</string>
     <string name="editor_cancel_button">Cancel</string>
