--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_edit">Редактировать</string>
     <string name="edit_message_title">Редактирование сообщения</string>
     <string name="share_message_title">Поделиться сообщением</string>
+    <string name="video_view_title">Просмотреть видео</string>
     <string name="open_editor_title">Открыть редактор текста</string>
     <string name="editor_save_button">Сохранить</string>
     <string name="editor_cancel_button">Отмена</string>
