--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,4 +18,5 @@
     <string name="open_editor_title">Открыть редактор текста</string>
     <string name="editor_save_button">Сохранить</string>
     <string name="editor_cancel_button">Отмена</string>
+    <string name="menu_view">Просмотр</string>
 </resources>
