--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="open_editor_title">Open post editor</string>
     <string name="editor_save_button">Save</string>
     <string name="editor_cancel_button">Cancel</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_view">View</string>
 </resources>
