--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_view">View</string>
+    <string name="editor_edit_button">Edit</string>
+    <string name="editor_remove_button">Delete</string>
 </resources>
