--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,7 +18,7 @@
     <string name="open_editor_title">Открыть редактор текста</string>
     <string name="editor_save_button">Сохранить</string>
     <string name="editor_cancel_button">Отмена</string>
-    <string name="menu_view">Просмотр</string>
+    <string name="menu_details">Подробности</string>
     <string name="editor_edit_button">Редактировать</string>
     <string name="editor_remove_button">Удалить</string>
 </resources>
