--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,7 @@
     <string name="open_editor_title">Open post editor</string>
     <string name="editor_save_button">Save</string>
     <string name="editor_cancel_button">Cancel</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="menu_view">View</string>
+    <string name="menu_details">Details</string>
     <string name="editor_edit_button">Edit</string>
     <string name="editor_remove_button">Delete</string>
 </resources>
