--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -21,4 +21,7 @@
     <string name="menu_details">Подробности</string>
     <string name="editor_edit_button">Редактировать</string>
     <string name="editor_remove_button">Удалить</string>
+    <string name="channel_remote_name">Уведомления с сервера</string>
+    <string name="channel_remote_description">Уведомления с удалённого сервера</string>
+    <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
 </resources>
