--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="menu_details">Details</string>
     <string name="editor_edit_button">Edit</string>
     <string name="editor_remove_button">Delete</string>
+    <string name="channel_remote_name">Server notifications</string>
+    <string name="channel_remote_description">Notifications from remote server</string>
+    <string name="notification_user_liked">%1$s liked post %2$s</string>
 </resources>
