--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -24,4 +24,5 @@
     <string name="channel_remote_name">Server notifications</string>
     <string name="channel_remote_description">Notifications from remote server</string>
     <string name="notification_user_liked">%1$s liked post %2$s</string>
+    <string name="notification_user_posted">%1$s published new post:</string>
 </resources>
