Likes and swipe to refresh

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,4 +25,7 @@
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
     <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
     <string name="notification_user_posted">%1$s опубликовал сообщение:</string>
+    <string name="empty_posts">В этом списке нет сообщений</string>
+    <string name="error_loading">Не удалось загрузить сообщения</string>
+    <string name="retry_loading">Повторить попытку загрузки сообщений</string>
 </resources>
