--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -32,4 +32,5 @@
     <string name="error_post_save">Error saving post</string>
     <string name="error_post_like">Error updating post</string>
     <string name="close_snackbar">Close</string>
+    <string name="new_posts_available">New posts available</string>
 </resources>
