--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -32,4 +32,5 @@
     <string name="error_post_save">Ошибка при сохранении сообщения</string>
     <string name="error_post_like">Ошибка при обновлении сообщения</string>
     <string name="close_snackbar">Закрыть</string>
+    <string name="new_posts_available">Доступны новые сообщения</string>
 </resources>
