--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -36,4 +36,6 @@
     <string name="menu_save">Сохранить</string>
     <string name="description_select_photo">Вставить изображение из галлереи</string>
     <string name="description_take_photo">Вставить изображение с камеры</string>
+    <string name="description_photo">Прикрепленное изображение</string>
+    <string name="remove">Удалить</string>
 </resources>
