Demo authentication added

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -38,4 +38,8 @@
     <string name="description_take_photo">Вставить изображение с камеры</string>
     <string name="description_photo">Прикрепленное изображение</string>
     <string name="remove">Удалить</string>
+    <string name="sign_in">Вход</string>
+    <string name="sign_up">Регистрация</string>
+    <string name="sign_out">Выйти</string>
+    <string name="google_play_unavailable">Сервис Google Play недоступен</string>
 </resources>
