--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,8 @@
     <string name="description_take_photo">Make image with camera</string>
     <string name="description_photo">Attached image</string>
     <string name="remove">Remove</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_out">Sign out</string>
+    <string name="google_play_unavailable">Google Play service unavailable</string>
 </resources>
