--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enter_login_data">Enter login data</string>
     <string name="submit_login_form">Sign in</string>
+    <string name="error_auth">Authorization error</string>
 </resources>
